<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details_film.DetailFilmActivity">


    <ImageView
        android:id="@+id/detail_poster_img"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/description_detail_poster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/detail_favorite_img"
        android:contentDescription="@string/description_detail_favorite"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_title"
        app:layout_constraintEnd_toEndOf="@+id/detail_poster_img"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/detail_poster_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_favorite_gray" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:padding="8dp"
        android:textColor="@color/yellow_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_poster_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_poster_img"
        app:layout_constraintTop_toTopOf="@+id/detail_poster_img"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/detail_sinopse"
        app:layout_constraintStart_toStartOf="@+id/detail_poster_img"
        app:layout_constraintTop_toBottomOf="@+id/detail_poster_img"
        style="@style/detail_text_header"
        />

    <TextView
        android:id="@+id/detail_plot"
        style="@style/detail_text_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_actors"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_plot"
        style="@style/detail_text_header"/>

    <TextView
        android:id="@+id/detaill_actor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/detail_plot"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        />

    <TextView
        android:id="@+id/textView7"
        style="@style/detail_text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_others"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detaill_actor" />

    <TextView
        android:id="@+id/detaill_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/detaill_writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/detaill_director"
        app:layout_constraintTop_toBottomOf="@+id/detaill_director" />

    <TextView
        android:id="@+id/detaill_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/detaill_writer"
        app:layout_constraintTop_toBottomOf="@+id/detaill_writer" />

    <TextView
        android:id="@+id/detaill_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/detaill_language"
        app:layout_constraintTop_toBottomOf="@+id/detaill_language" />

    <TextView
        android:id="@+id/detaill_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_yellow_rounded"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/detail_poster_img"
        app:layout_constraintTop_toTopOf="@+id/detail_poster_img" />

    <TextView
        android:id="@+id/detaill_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_poster_img" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blue_200"
        android:numStars="10"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_title"
        app:layout_constraintEnd_toEndOf="@+id/detaill_genre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detail_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
